<resources>
    <string name="app_name">HotShot</string>

    <string name="settings">Ustawienia</string>
    <string name="hot_shot">HotShot</string>
    <string name="title_activity_details">Szczegóły</string>

    <string name="synchronize_in_background">Synchronizacja ofert w tle</string>
    <string name="synchronize">Synchronizuj</string>
    <string name="synchronize_only_with_wi_fi">Tylko z Wi-Fi</string>
    <string name="notifications">Powiadomienia</string>
    <string name="inactive">Niekatywne</string>
    <string name="active">Aktywne</string>
    <string name="vibration">Wibracje</string>
    <string name="new_notification">Nowa gorąca oferta:</string>
    <string name="synchronization_error">Synchronizacja nie powiodła się</string>
    <string name="refresh">Odśwież</string>

    <!-- SharedPreferences -->

    <string name="pref_synchronize_in_background">synchronization</string>
    <string name="pref_synchronize_only_with_wifi">onlyWifiSynchronization</string>
    <string name="pref_notify_user_about_new">notification</string>
    <string name="pref_vibration_in_notification">vibration</string>
    <string name="pref_last_synchronization_time">lastSynchronizationTime</string>

    <!-- Transitions -->
    <string name="shared_image_transition">details_image</string>
</resources>
